--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=mongodb+srv://evemotors:evemotorsdb@evemotorscluster.yv2fh35.mongodb.net/?retryWrites=true&w=majority
 DATABASE_NAME=evemotorsdb
-API_KEY=i_will_add
+UPLOAD_PATH="uploads"
 SECRET_KEY=kfc_secret_recipe
 PORT=3000
